--- a/blog2.html
+++ b/blog2.html
@@ -275,8 +275,13 @@
 		<p class="heading" id="17" style="font-size:25px"><b>17. Pengalaman saat Lomba Matematika UMC UNDIP 2025</b></p>
 		<div class="container2">
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img040" src="images/placeholder-image-gray-16x9-1.webp">
+                <!-- <img class="image" id="img040" src="images/20250208_170018.heic"> -->
+				<img class="image" id="img040" src="images/20250208_170018.jpg">
                 <div class="desc" id="img040d">Gambar 40: Pengumuman Juara UMC UNDIP 2025</div>
+            </div>
+			<div class="gallery" style="width:200px;">
+                <img class="image" id="img041" src="images/20250208_135717.jpg">
+                <div class="desc" id="img041d">Gambar 41: Foto bersama teman saat UMC UNDIP 2025</div>
             </div>
 			<div class="clearfix"></div><br>
 			Lomba UMC adalah singkatan dari Undip's Mathematics Competition, yang diselenggarakan oleh Universitas Diponegoro.
@@ -293,12 +298,12 @@
 		<p class="heading" id="18" style="font-size:25px"><b>18. Pengalaman saat Lomba Matematika KMNR dan IKMC 2025</b></p>
 		<div class="container2">
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img041" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img041d">Gambar 41: Pengumuman Juara KMNR 2025</div>
+                <img class="image" id="img042" src="images/KMNR_Silver Certificate_DEVAN_page-0001.jpg">
+                <div class="desc" id="img042d">Gambar 42: Medali Perak KMNR 2025</div>
             </div>
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img042" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img042d">Gambar 42: Medali Emas IKMC 2025</div>
+                <img class="image" id="img043" src="images/IKMC_Gold Certificate_DEVAN_page-0001.jpg">
+                <div class="desc" id="img043d">Gambar 43: Medali Emas IKMC 2025</div>
             </div>
 			<div class="clearfix"></div><br>
             Lomba KMNR (singkatan dari Kompetisi Matematika Nalaria Realistik) adalah lomba yang diselenggarakan oleh KPM (singkatan dari Klinik Pendidikan MIPA), dimana sudah diadakan ke 20 kali tahun ini.
@@ -322,12 +327,12 @@
             <span style="font-size:23px;"><span class="color004"><b>Hari kedua</b></span> ~ <span class="color009"><b>Sabtu, 15 November 2025</b></span></span>
 			<br><br>
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img043" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img043d">Gambar 43: Suasana hari pertama LMNAS UGM 2025</div>
+                <img class="image" id="img044" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img044d">Gambar 44: Suasana hari pertama LMNAS UGM 2025</div>
             </div>
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img044" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img044d">Gambar 44: Suasana hari pertama LMNAS UGM 2025 (2)</div>
+                <img class="image" id="img045" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img045d">Gambar 45: Suasana hari pertama LMNAS UGM 2025 (2)</div>
             </div>
 			<div class="clearfix"></div><br>
 			Di hari pertama LMNas, ada acara pembukaan dari panitia jam 8 pagi di gedung FMIPA UGM lantai 7. Di jam 9 pagi, peserta diarahkan ke ruang lantai 3 untuk babak semifinal selama 2 jam.
@@ -337,12 +342,12 @@
 			<span style="font-size:23px;"><span class="color004"><b>Hari ketiga</b></span> ~ <span class="color009"><b>Minggu, 16 November 2025</b></span></span>
 			<br><br>
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img045" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img045d">Gambar 45: Suasana hari kedua LMNAS UGM 2025</div>
+                <img class="image" id="img046" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img046d">Gambar 46: Suasana hari kedua LMNAS UGM 2025</div>
             </div>
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img046" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img046d">Gambar 46: Suasana hari kedua LMNAS UGM 2025 (2)</div>
+                <img class="image" id="img047" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img047d">Gambar 47: Suasana hari kedua LMNAS UGM 2025 (2)</div>
             </div>
 			<div class="clearfix"></div><br>
 			Di hari kedua LMNas, ada pengumuman bahwa Devan tidak lolos ke 5 besar, meskipun tetap semangat dan percaya diri.
@@ -355,12 +360,12 @@
 		<p class="heading" id="20" style="font-size:25px"><b>20. Pengalaman saat Lomba Matematika LOGIKA UI 2025</b></p>
 		<div class="container2">
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img045" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img045d">Gambar 47: Pengumuman Juara LOGIKA UI 2025</div>
+                <img class="image" id="img048" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img048d">Gambar 48: Pengumuman Juara LOGIKA UI 2025</div>
             </div>
 			<div class="gallery" style="width:300px;">
-                <img class="image" id="img045" src="images/placeholder-image-gray-16x9-1.webp">
-                <div class="desc" id="img045d">Gambar 48: Pengumuman Juara LOGIKA UI 2025 (2)</div>
+                <img class="image" id="img049" src="images/placeholder-image-gray-16x9-1.webp">
+                <div class="desc" id="img049d">Gambar 49: Pengumuman Juara LOGIKA UI 2025 (2)</div>
             </div>
 			<div class="clearfix"></div><br>
             Lomba LOGIKA UI 2025 adalah lomba yang diselenggarakan oleh Universitas Indonesia (UI). ... <span class="color007">[Under Construction]</span> ... Akhirnya Devan masuk 5 besar, dan Juara 4.
