--- a/blog2.html
+++ b/blog2.html
@@ -391,8 +391,10 @@
     <script src="script.js"></script>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Roboto Mono'; margin-left:10px; line-height:1.5;">
-		Terakhir diupdate: 20 Desember 2025<br>
-        Copyright © 2025 by Devan
+		<!-- Terakhir diupdate: 20 Desember 2025<br>
+        Copyright © 2025 by Devan -->
+		Terakhir diupdate: 13 Februari 2026<br>
+        Copyright © 2026 by Devan
         </p>
     </footer>
 </body>
